--- a/app/views/favorites/index.html.erb
+++ b/app/views/favorites/index.html.erb
@@ -1,10 +1,10 @@
-<h1>Listing favorites</h1>
+<h1>Listing your favorites:</h1>
 
 <table>
   <thead>
     <tr>
-      <th>Question</th>
-      <th>Why</th>
+      <th>Question you want to save:</th>
+      <th>Why?</th>
       <th></th>
       <th></th>
       <th></th>
